--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ logging:
         logFormat: "[%thread] %highlight(%-5level) %cyan(%logger{15}) - %msg %n"
 
 database:
-  driverClass: org.postgresql.Driver
-  user: postgres
+  driverClass: com.mysql.jdbc.Driver
+  user: root
   password: hire
-  url: jdbc:postgresql://192.168.99.100:5432/postgres
+  url: jdbc:mysql://localhost:3306/postgres
