--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
             <version>${dropwizard.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4-1201-jdbc41</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
